# potentials-schema

./: LICENSE  PROFILE.md  Potentials.capnp  README.md  meson.build  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/potentials_schema/: Potentials.capnp  __init__.py  __main__.py
src/potentials_schema/lib/cmake/potentials-schema/: potentials-schema-config.cmake
src/potentials_schema/lib/pkgconfig/: potentials-schema.pc
