[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "potentials-schema"
version = "1.10.0"
description = "Canonical Cap'n Proto contract for OmniPotentRPC potential evaluations"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "OmniPotentRPC developers" }]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
pycapnp = ["pycapnp>=2.0"]

[project.urls]
Homepage = "https://github.com/OmniPotentRPC/potentials-schema"
Source = "https://github.com/OmniPotentRPC/potentials-schema"

[project.scripts]
potentials-schema = "potentials_schema.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/potentials_schema"]

[tool.hatch.build.targets.sdist]
include = ["src", "Potentials.capnp", "README.md", "LICENSE"]
